# multi-person-detection

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  results_report.md  setup.cfg
.github/workflows/: ci.yml
data/results/: README.md
src/: __init__.py  main.py
src/demo/: realtime.py
src/models/: __init__.py  backends.py  person_detector.py
src/solutions/: __init__.py  base.py  counting.py  temporal.py  temporal_cardaware.py  temporal_textaware.py
src/utils/: __init__.py  config.py  dataset_evaluator.py  report_generator.py  video_processor.py
tests/: __init__.py  test_backends.py  test_cli.py  test_dataset_evaluator.py  test_person_detector.py  test_realtime.py  test_report_generator.py  test_solutions.py  test_video_processor.py
